@@ -1,5 +1,6 @@
 13/06/2019:
-	- Re-factored to display Logger output type availability at configure stage
+	- Re-factored to display Logger output type availability at configure stage.
+	- SIGHUP signal now empties internal caches rather than terminates iipsrv.
 
 
 12/06/2019:
